...
				SchoolLoopCourse(courseName: "Charms", period: "1", teacherName: "Flitwick, Filius", grade: "E", score: "85.31%", periodID: "1"),
				{
					let course = SchoolLoopCourse(courseName: "Defense Against the Dark Arts", period: "2", teacherName: "Snape, Severus", grade: "E", score: "83.75%", periodID: "2")
					_ = course.set(newLastUpdated: "6/21/1997 9:00 AM")
					course.cutoffs = [
...
					course.categories = [
						SchoolLoopCategory(name: "Practicals", score: "0.95", weight: "0.35"),
						SchoolLoopCategory(name: "Essays", score: "0.575", weight: "0.15"),
					]
					course.grades = [
...
				SchoolLoopCourse(courseName: "Herbology", period: "3", teacherName: "Sprout, Pomona", grade: "E", score: "84.69%", periodID: "3"),
				{
					let course = SchoolLoopCourse(courseName: "Potions", period: "5", teacherName: "Slughorn, Horace", grade: "O", score: "96.67%", periodID: "4")
					course.categories = [
						SchoolLoopCategory(name: "Potions", score: "1.0333", weight: ".5"),
...
					return course
				}(),
				SchoolLoopCourse(courseName: "Transfiguration", period: "6", teacherName: "McGonagall, Minerva", grade: "E", score: "83.73%", periodID: "5"),
			]
			completion?([], .noError)
...
				SchoolLoopAssignment(title: "Principles of Rematerialization Essay", assignmentDescription: "", courseName: "Transfiguration", dueDate: "842270400000", links: [], iD: "1"),
				SchoolLoopAssignment(title: "Essay", assignmentDescription: "", courseName: "Herbology", dueDate: "858081600000", links: [], iD: "2"),
				SchoolLoopAssignment(title: "Dementor Essay", assignmentDescription: "I hope for your sakes they are better than the tripe I had to endure on resisting the Imperius Curse.", courseName: "Defense Against the Dark Arts", dueDate: "858600000000", links: [], iD: "3"),
				SchoolLoopAssignment(title: "Practice Turning Vinegar into Wine", assignmentDescription: "", courseName: "Charms", dueDate: "861796800000", links: [], iD: "4"),
			]
...
				SchoolLoopLoopMail(subject: "Please Come Immediately", sender: SchoolLoopContact(id: "", name: "Dumbledore, Albus", role: "", desc: ""), date: "867520800000", ID: "10"),
				{
					let loopMail = SchoolLoopLoopMail(subject: "Aragog's Dead", sender: SchoolLoopContact(id: "", name: "Hagrid, Reubeus", role: "", desc: ""), date: "861624000000", ID: "9")
					loopMail.message = "Dear Harry, Ron and Hermione,<br><br>Aragog died last night. Harry and Ron, you met him and you know how special he was. Hermione, I know you’d have liked him. It would mean a lot to me if you’d nip down for the burial later this evening. I’m planning on doing it round dusk, that was his favorite time of day. I know you’re not supposed to be out that late, but you can use 
					return loopMail
				}(),
...
				SchoolLoopLoopMail(subject: "Re: Slug Club Dinner", sender: SchoolLoopContact(id: "", name: "Severus, Snape", role: "", desc: ""), date: "842731200000", ID: "4"),
				{
					let loopMail = SchoolLoopLoopMail(subject: "Slug Club Dinner", sender: SchoolLoopContact(id: "", name: "Slughorn, Horace", role: "", desc: ""), date: "842727600000", ID: "3")
					loopMail.message = "Harry,<br><br>What do you say to a spot of supper tonight in my rooms instead? We’re having a little party, just a few rising stars, I’ve got McLaggen coming and Zabini, the charming Melinda Bobbin — I don’t know whether you know her? Her family owns a large chain of apothecaries — and, of course, I hope very much that Miss Granger will favor me by coming too.<br><br>-Hora
					return loopMail
...
				SchoolLoopNews(title: "Hufflepuff-Gryffindor Quidditch Match", authorName: "Hooch, Rolanda", createdDate: "857203200000", newsDescription: "", links: [], iD: "6"),
				SchoolLoopNews(title: "Hogmeade Trip Cancelled", authorName: "McGonagall, Minerva", createdDate: "857116800000", newsDescription: "", links: [], iD: "5"),
				SchoolLoopNews(title: "Apparition Lessons", authorName: "Twycross, Wilkie", createdDate: "852537600000", newsDescription: "If you are seventeen years of age, or will turn seventeen on or before the 31st August next, you are eligible for a twelve-week course of Apparition Lessons from a Ministry of Magic Apparition instructor. Please sign below if you would like to participate. Cost: 12 Galleon
				SchoolLoopNews(title: "First Quidditch Match of the Year!", authorName: "Hooch, Rolanda", createdDate: "846316800000", newsDescription: "", links: [], iD: "3"),
				SchoolLoopNews(title: "Gryffindor Quidditch Team Tryouts", authorName: "Potter, Harry J.", createdDate: "842169600000", newsDescription: "Hello, fellow Gryffindor students!<br><br>The Gryffindor Quidditch Team will be holding tryouts next Saturday. We're looking for qualified Chasers, Beaters, and a Keeper, so come out to the Quidditch pitch if you're interested!<br><br>- Harry", links: [], iD
...
