...

	@IBAction func mark(_ sender: Any) {
		let alertController = UIAlertController(title: "Add a mark to the log", message: nil, preferredStyle: .alert)
		alertController.addTextField { textField in
			textField.placeholder = "Mark"
		}
		let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
		let doneAction = UIAlertAction(title: "Done", style: .default) { action in
			self.logTextView.text = Logger.readLog()
		}
		alertController.addAction(cancelAction)
		alertController.addAction(doneAction)
		present(alertController, animated: true, completion: nil)
	}
...
